# FitArena-Sports-Performance-Analytics

./: .gitignore  PROJECT_STRUCTURE.md  README.md
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt  run.py  setup.py  train_models.py
backend/config/: settings.py
backend/notebooks/: 01_exploratory_data_analysis.ipynb
backend/src/: __init__.py
backend/src/analytics/: __init__.py  dashboard_analytics.py  visualizations.py
backend/src/api/: auth.py  main.py  schemas.py
backend/src/data_processing/: __init__.py  data_loader.py  data_validator.py  feature_engineering.py
backend/src/database/: __init__.py  connection.py  models.py
backend/src/models/: __init__.py  predictive_models.py  recommendation_engine.py
backend/tests/: test_data_processing.py
deployment/: .env.example  deployment-guide.md  docker-compose.yml
docs/: FRONTEND_SUMMARY.md  PROJECT_SUMMARY.md  Product Requirements & Specification Document.md  QUICKSTART.md  README_PROJECT.md  SETUP_GUIDE.md
frontend/: .env.development  .env.production  .eslintrc.js  Dockerfile  QUICKSTART.md  README.md  nginx.conf  package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/plugins/: vuetify.js
frontend/src/router/: index.js
frontend/src/services/: api.js  authService.js
frontend/src/store/: index.js
frontend/src/views/: Analytics.vue  Dashboard.vue  DataUpload.vue  Login.vue  NotFound.vue  Predictions.vue  Profile.vue  Recommendations.vue  Register.vue  Reports.vue  TeamDetail.vue  Teams.vue
(+4 files in other folders)
